--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a routerLink="/" class="logo" style="text-align:left">BF Admin</a>
+        <a routerLink="/" style="text-align:left">BF Admin</a>
         <nav>
             <ul>
                 <li><a routerLink="/links">Links</a></li>
