--- a/src/app/images/images.component.scss
+++ b/src/app/images/images.component.scss
@@ -1,20 +1,12 @@
 table, th, td {
-    border: 1px solid grey;
-    border-collapse: collapse;
-    padding: 5px;
-  }
-  table tr:nth-child(odd) {
-    background-color: #f1f1f1;
-  }
-  table tr:nth-child(even) {
-    background-color: #ffffff;
-  }
-
-table.images {
-    table-layout: auto;
-    width: 90%;  
+  margin: 10px;
+  border: 1px solid grey;
+  border-collapse: collapse;
+  padding: 5px;
 }
-
-th, td {
-    padding: 10px;
+table tr:nth-child(odd) {
+  background-color: #f1f1f1;
+}
+table tr:nth-child(even) {
+  background-color: #ffffff;
 }
