--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,63 +1,9 @@
-h3 {
-    color: darkblue;
-}
-
-table, th, td {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 5px;
-}
-table tr:nth-child(odd) {
-  background-color: #f1f1f1;
-}
-table tr:nth-child(even) {
-  background-color: #ffffff;
-}
-
-// header {
-//   background: #7700FF;
-
-//   .logo {
-//       font-weight: bold;
-//   }
-
-// }
-
-ul {
-  list-style-type: none;
-  margin: 0;padding: 0;
-
-  li {
-      background: rgb(238, 238, 238);
-      padding: 2em;
-      border-radius: 4px;
-      margin-bottom: 7px;
-      display: grid;
-      grid-template-columns: 60px auto;
-
-      p {
-          font-weight: bold;
-          margin-left: 20px;
-      }
-
-      img {
-          border-radius: 50%;
-          width: 100%;
-      }
-  }
-}
-
-table.birdImageLinks {
-    table-layout: fixed;
-    min-width: 300px;
-    width: 35%;
-
-    th, td {
-        td {
-            font-size: 12px;
-        }
-        padding: 10px;
-    }
-}
-
-
+.photo {
+    padding: 0px 0px 0px 0px;
+    border: 3px solid #fff;
+    outline: 1px solid #000;
+    margin: 1px;
+    width: 125px;
+    height: 95px;
+    display: block;
+ }
