--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -17,7 +17,7 @@ Message: {{ message }}
         <th>status</th>
     </tr>
     <tr *ngFor='let image of images$'>
-        <td>{{ image.id }}
+        <!-- <td>{{ image.id }}
             <br>
             <button 
                 *ngIf="!(editOn)" 
@@ -40,6 +40,22 @@ Message: {{ message }}
                 (click)="cancelImage(image.id)" 
                 >Cancel</button>
 
+        </td> -->
+        <td>{{ image.id }}
+            <br>
+            <button 
+                style="font-size: 10px" 
+                (click)="editImage(image.id)" 
+                >Edit</button>
+            <br>
+            <button 
+                style="font-size: 10px" 
+                (click)="updateImage( image.id, myFilename.value, mySourceCamera.value, myDate.value, myTime.value, myDescription.value, myLastUpdate.value, myStatus.value)" 
+            >Update</button>
+            <button  
+                style="font-size: 10px" 
+                (click)="deleteImage(image.id)" 
+                >Delete</button>
         </td>
         <td>
             <a href="http://10.0.1.14/images/{{image.filename}}" target="_blank">
@@ -50,21 +66,15 @@ Message: {{ message }}
         </td>        
         <td>
             {{ image.filename }}
+            <!-- *ngIf="editOn && (image.id == editId)" -->
             <input 
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 15em;"  
                 #myFilename placeholder="myFilename" 
                 value="{{image.filename}}">
-            <div 
-                *ngFor="let link of links$">
-                <!-- *ngIf="link.imageId == editId"> -->
-                {{ link.id }}
-            </div>
         </td>
         <!-- Need to add a dropdown list for values of sourceCamera to choose  -->
         <td>{{ image.sourceCamera }}
                 <input 
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 6em;"  
                 #mySourceCamera placeholder="mySourceCamera" 
                 value="{{image.sourceCamera}}">
@@ -72,7 +82,6 @@ Message: {{ message }}
         <td>{{ image.date }}
                 <input 
                 type="date"
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 9em;"  
                 #myDate placeholder="myDate" 
                 value="{{image.date}}">
@@ -80,14 +89,12 @@ Message: {{ message }}
         <td>{{ image.time }}
                 <input 
                 type="string"
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 9em;"  
                 #myTime placeholder="myTime" 
                 value="{{image.time}}">
         </td>
         <td>{{ image.description }}
                 <textarea 
-                *ngIf="editOn && (image.id == editId)"
                 #myDescription placeholder="myDescription" 
                 cols="30" rows="2"
                 style="font-style: italic; color:blue; width: 25em;"  
@@ -96,14 +103,12 @@ Message: {{ message }}
         <td>{{ image.lastUpdate }}
                 <input 
                 type="datetime"
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 13em;"  
                 #myLastUpdate placeholder="myLastUpdate" 
                 value="{{image.lastUpdate}}">
         </td>
         <td>{{ image.status }}
                 <input 
-                *ngIf="editOn && (image.id == editId)"
                 style="font-style: italic; color:blue; width: 10em;"  
                 #myStatus placeholder="myStatus" 
                 value="{{image.status}}">
