--- a/src/app/links/links.component.scss
+++ b/src/app/links/links.component.scss
@@ -1,21 +1,58 @@
-table, th, td {
-    margin: 10px;
-    border: 1px solid grey;
-    border-collapse: collapse;
-    padding: 5px;
-  }
-  table tr:nth-child(odd) {
-    background-color: #f1f1f1;
-  }
-  table tr:nth-child(even) {
-    background-color: #ffffff;
-  }
-  .photo {
-    padding: 0px 0px 0px 0px;
-    border: 3px solid #fff;
-    outline: 1px solid #000;
-    margin: 1px;
-    width: 125px;
-    height: 95px;
-    display: block;
+// table, th, td {
+//     margin: 10px;
+//     border: 1px solid grey;
+//     border-collapse: collapse;
+//     padding: 5px;
+//   }
+//   table tr:nth-child(odd) {
+//     background-color: #f1f1f1;
+//   }
+//   table tr:nth-child(even) {
+//     background-color: #ffffff;
+//   }
+//   .photo {
+//     padding: 0px 0px 0px 0px;
+//     border: 3px solid #fff;
+//     outline: 1px solid #000;
+//     margin: 1px;
+//     width: 125px;
+//     height: 95px;
+//     display: block;
+//  }
+
+.item1 { grid-area: header; }
+.item2 { grid-area: menu; }
+.item3 { grid-area: main; }
+.item4 { grid-area: right; }
+.item5 { grid-area: footer; }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    'header header header header header header'
+    'menu main main main right right'
+    'menu footer footer footer footer footer';
+  grid-gap: 5px;
+  background-color: #2196F3;
+  padding: 5px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  height: 1fl;
+  padding: 10px 10px;
+  font-size: 18px;
+}
+
+.photo {
+  padding: 0px 0px 0px 0px;
+  border: 1px solid #fff;
+  outline: 1px solid #000;
+  margin: 1px 1px 1px 1px;
+  width: 125px;
+  height: 95px;
  }
+// display: block;
+
+
